--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
 
     <mat-sidenav-container class="example-sidenav-container">
         <mat-sidenav #sidenav style="width: 200px">
-            <img src="assets/mitocode.png" width="128" style="margin-left: 20px">
+            <img src="assets/EPC.png" width="128" style="margin-left: 20px">
 
             <div *ngFor="let m of menus">
                 <button mat-menu-item (click)="sidenav.toggle()" routerLink="{{m.url}}" style="cursor: pointer">
